force-app/main/default/objects/PRODUCT__c/fields/SKUNumberType__c.field-meta.xml
<CustomField>
    <fullName>SKUNumberType__c</fullName>
    <label>SKU NUMBER TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SKUNumberType</valueSetName>
    </valueSet>
</CustomField>