force-app/main/default/objects/PRODUCT__c/fields/SubscriptionChargeBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionChargeBillingFreq__c</fullName>
    <label>Subscription Charge Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubscriptionChargeBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>