force-app/main/default/objects/PRODUCT__c/fields/SubscriptionChargeBillingFreqType__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionChargeBillingFreqType__c</fullName>
    <label>Subscription Charge Billing Freq Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingFrequencyType</valueSetName>
    </valueSet>
</CustomField>