force-app/main/default/objects/PRODUCT__c/fields/SubscriptionServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Service Available?</label>
    <type>Checkbox</type>
</CustomField>