force-app/main/default/objects/PRODUCT__c/fields/SubscriptionServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionServiceCharge__c</fullName>
    <label>Subscription Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>