force-app/main/default/objects/PRODUCT__c/fields/SubscriptionServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionServiceDetail__c</fullName>
    <label>Subscription Service Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>