force-app/main/default/objects/PRODUCT__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>Text( QuantityPerUnit__c ) &amp; &apos; in &apos; &amp; Text( UnitType__c) &amp;&apos; - &apos; &amp; ProductName__c &amp;&apos; - &apos; &amp; External_ID__c &amp;&apos; - &apos; &amp; SKUNumber__c &amp;&apos; - &apos; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>