force-app/main/default/objects/PRODUCT__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRODUCT(SUPPLIER)</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>