force-app/main/default/objects/PRODUCT__c/fields/SupportServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>SupportServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support  Service Available?</label>
    <type>Checkbox</type>
</CustomField>