force-app/main/default/objects/PRODUCT__c/fields/SupportServiceBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>SupportServiceBillingFreq__c</fullName>
    <label>Support Service Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SupportServiceBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>