force-app/main/default/objects/PRODUCT__c/fields/SupportServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>SupportServiceDetail__c</fullName>
    <label>Support  Service Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>