force-app/main/default/objects/PRODUCT__c/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <label>Tax Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxCategory</valueSetName>
    </valueSet>
</CustomField>