force-app/main/default/objects/PRODUCT__c/fields/TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>TaxCategory__c</fullName>
    <label>TAX CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxType</valueSetName>
    </valueSet>
</CustomField>