force-app/main/default/objects/PRODUCT__c/fields/TaxRateBuying__c.field-meta.xml
<CustomField>
    <fullName>TaxRateBuying__c</fullName>
    <label>TAX RATE-BUYING(%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>