force-app/main/default/objects/PRODUCT__c/fields/TaxRateSelling__c.field-meta.xml
<CustomField>
    <fullName>TaxRateSelling__c</fullName>
    <label>TAX RATE-SELLING(%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>