force-app/main/default/objects/PRODUCT__c/fields/UnitLevel1__c.field-meta.xml
<CustomField>
    <fullName>UnitLevel1__c</fullName>
    <label>Unit(Level 1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>