force-app/main/default/objects/PRODUCT__c/fields/UnitPriceConversionForBuying__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceConversionForBuying__c</fullName>
    <label>UNIT PRICE CONVERSION FOR BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitPriceConversion</valueSetName>
    </valueSet>
</CustomField>