force-app/main/default/objects/PRODUCT__c/fields/UnitPriceConversionForSelling__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceConversionForSelling__c</fullName>
    <label>UNIT PRICE CONVERSION FOR SELLING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitPriceConversion</valueSetName>
    </valueSet>
</CustomField>