force-app/main/default/objects/PRODUCT__c/fields/UsageCharge__c.field-meta.xml
<CustomField>
    <fullName>UsageCharge__c</fullName>
    <label>Usage Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>