force-app/main/default/objects/PRODUCT__c/fields/UsageChargeAvailable__c.field-meta.xml
<CustomField>
    <fullName>UsageChargeAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage Charge Available?</label>
    <type>Checkbox</type>
</CustomField>