force-app/main/default/objects/PRODUCT__c/fields/UsageChargeBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>UsageChargeBillingFreq__c</fullName>
    <label>Usage Charge Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UsageChargeBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>