force-app/main/default/objects/PRODUCT__c/fields/UsageChargeBillingFreqType__c.field-meta.xml
<CustomField>
    <fullName>UsageChargeBillingFreqType__c</fullName>
    <label>Usage Charge Billing Freq Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingFrequencyType</valueSetName>
    </valueSet>
</CustomField>