force-app/main/default/objects/PRODUCT__c/fields/VATInvoiceAtPrintENG__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceAtPrintENG__c</fullName>
    <label>VAT INVOICE AT PRINT(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>