force-app/main/default/objects/PRODUCT__c/fields/VATInvoiceAtPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceAtPrintLocal__c</fullName>
    <label>VAT INVOICE AT PRINT(LOCAL)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>