force-app/main/default/objects/PRODUCT__c/fields/VS_color__c.field-meta.xml
<CustomField>
    <fullName>VS_color__c</fullName>
    <label>VS color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>