force-app/main/default/objects/PRODUCT__c/fields/WLDUnit__c.field-meta.xml
<CustomField>
    <fullName>WLDUnit__c</fullName>
    <inlineHelpText>W:Width
L:Length
H:Height</inlineHelpText>
    <label>W/L/H UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WLDUnit</valueSetName>
    </valueSet>
</CustomField>