force-app/main/default/objects/PRODUCT__c/recordTypes/FreshProduct.recordType-meta.xml
<RecordType>
    <fullName>FreshProduct</fullName>
    <active>true</active>
    <label>Fresh Product</label>
</RecordType>