force-app/main/default/objects/PRODUCT__c/recordTypes/FrozenProduct.recordType-meta.xml
<RecordType>
    <fullName>FrozenProduct</fullName>
    <active>true</active>
    <label>Frozen Product</label>
</RecordType>