force-app/main/default/objects/PRODUCT__c/recordTypes/NonTemperatureProduct.recordType-meta.xml
<RecordType>
    <fullName>NonTemperatureProduct</fullName>
    <active>true</active>
    <label>Non Temperature Product</label>
</RecordType>