force-app/main/default/objects/PRODUCT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductName__c</columns>
    <columns>BillingType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>GoodOwner__c</columns>
    <columns>Buyer__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>SKU__c</columns>
    <columns>ItemType__c</columns>
    <columns>SKUNumber__c</columns>
    <columns>BuyingCommercialValuePerUnitLocal__c</columns>
    <columns>LOTNumber__c</columns>
    <columns>InventoryType__c</columns>
    <columns>FastSlowClassification__c</columns>
    <columns>TemperatureType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BillingType__c</field>
        <operation>equals</operation>
        <value>Unit</value>
    </filters>
    <filters>
        <field>UnitType__c</field>
        <operation>equals</operation>
        <value>Carton</value>
    </filters>
    <label>0.All</label>
</ListView>