force-app/main/default/objects/PRODUCT__c/listViews/FreshProduct.listView-meta.xml
<ListView>
    <fullName>FreshProduct</fullName>
    <columns>NAME</columns>
    <columns>ProductName__c</columns>
    <columns>ProductGroup__c</columns>
    <columns>GoodOwner__c</columns>
    <columns>QuantityPerUnit__c</columns>
    <columns>UnitType__c</columns>
    <columns>ChargeType__c</columns>
    <columns>Measurement__c</columns>
    <columns>GrossWeight__c</columns>
    <columns>SKU__c</columns>
    <columns>SKUNumber__c</columns>
    <columns>BuyingCommercialValuePerUnitLocal__c</columns>
    <columns>IntegrationRequired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PRODUCT__c.FreshProduct</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>2.Fresh Product</label>
    <language>en_US</language>
</ListView>